tests/testcases/invalid/semantic/27_return_with_value_in_void_function.ciel
// Error: return with a value in function returning 'void'
void do_nothing() {
    return 42;  // Error: void function shouldn't return a value
}

int main() {
    do_nothing();
    return 0;
}
